# db-test

./: .gitignore  docker-compose.yml  pyproject.toml
.github/workflows/: cicd.yml
data/: premier_league.match.sql  premier_league.sql
src/: test.py
src/dbt_pipelines/: dbt_project.yml
