[tool.poetry]
name = "dbt-test"
version = "0.1.0"
description = ""
authors = ["DAUR"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
dbt-core = "^1.6.1"
dbt-postgres = "^1.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
